WIP: add random effects slide deck

--- a/lectures/index.qmd
+++ b/lectures/index.qmd
@@ -34,11 +34,12 @@ This workshop explores how to combine mechanistic modeling with machine learning
 | | *Neural networks, SciML, UDEs and NeuralODEs* | |
 | 12:00 - 12:30 | DeepNLME - Part 1 (hands-on) | *Hands-on notebook* |
 | 12:30 - 13:30 | 🍽️ **Lunch Break** | |
-| 13:30 - 15:30 | **DeepNLME with Complex Covariates** | [Slides](03-complex-covariates.html) |
+| 13:30 - 14:15 | **DeepNLME, random effects, and GenAI** | [Slides](03-random-effects-revisited.html) |
+| 14:15 - 15:30 | **DeepNLME with Complex Covariates** | [Slides](04-complex-covariates.html) |
 | | *Embeddings, text data, advanced applications* | *Hands-on notebook* |
 | 15:30 - 15:45 | ☕ **Coffee Break** | |
 | 15:45 - 16:15 | **Epidemiology Demo** | [Slides](04-epidemiology-demo.html) |
-| 16:15 - 17:00 | **Generative AI & Discussions** | [Slides](05-generative-ai.html) |
+| 16:15 - 17:00 | **Discussions and Conclusions** |  |
 
 ## Key Concepts Covered
 
