Update for publishing to gh-pages

--- a/lectures/01-introduction.qmd
+++ b/lectures/01-introduction.qmd
@@ -1,6 +1,7 @@
 ---
 title: "DeepPumas for Viral Dynamics"
 subtitle: "Introduction - Combining Mechanism and Machine Learning"
+format: revealjs
 ---
 
 # Welcome
