--- a/lectures/02-deepnlme-part1.qmd
+++ b/lectures/02-deepnlme-part1.qmd
@@ -1,6 +1,7 @@
 ---
 title: "DeepNLME - Part 1"  
 subtitle: "Neural Networks, SciML, and Universal Differential Equations"
+format: revealjs
 ---
 
 
