--- a/lectures/04-complex-covariates.qmd
+++ b/lectures/04-complex-covariates.qmd
@@ -1,6 +1,7 @@
 ---
 title: "DeepNLME with Complex Covariates"
 subtitle: "Embeddings, Text Data, and Advanced Applications"
+format: revealjs
 ---
 
 
