--- a/lectures/index.qmd
+++ b/lectures/index.qmd
@@ -59,10 +59,9 @@ To follow along in the presentations, just navigate to any relevant bits from he
 | 11:15 - 12:30 | **DeepNLME (hands-on)** | *Hands-on* |
 | 12:30 - 13:30 | 🍽️ **Lunch Break** | |
 | 13:30 - 13:55 | **Random effects, fitting NLME, and Generative AI** | [Slides](03-random-effects-revisited.html) |
-| 13:55 - 14:25 | **NLME and Generative AI** | [Slides](04-generative-ai.html) |
-| 14:25 - 14:40 | **DeepNLME with Complex Covariates** | [Slides](05-covariate-modelling.html) and hands-on |
-| 14:40 - 15:00 | **DeepNLME with Complex Covariates** hands-on |
-| 15:00 - 15:30 | **Embeddings** | [Slides](06-embeddings.html) |
+| 13:55 - 14:40 | **DeepNLME with Complex Covariates** | [Slides](05-covariate-modelling.html) and hands-on|
+| 14:40 - 15:00 | **NLME and Generative AI** | [Slides](04-generative-ai.html) |
+| 15:00 - 15:30 | **Embeddings** | [Slides](06-embeddings.html) or hands-on |
 | 15:30 - 15:45 | ☕ **Coffee Break** | |
 | 15:45 - 16:15 | **Epidemiology Demo** | [Slides](07-epidemiology-demo.html) |
 | 16:15 - 17:00 | **Discussions and Conclusions** |  |
